forum.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forum
  namespace: ccatlett2000
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: phpbb3
        service: forum
    spec:
      containers:
        - name: forum
          image: mafiascum/forum:develop-1e46a92318f7a19171a62c61eaff9396adac2f6d
          ports:
            - containerPort: 80
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: forum
  namespace: ccatlett2000
  labels:
    app: phpbb3
    service: forum
spec:
  selector:
    app: phpbb3
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
