mariadb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: ccatlett2000
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        role: database
      annotations:
        pod.alpha.kubernetes.io/init-containers: '[
          {
            "name": "init",
            "image": "mafiascum/mariadb-init:1.0.0",
            "imagePullPolicy": "IfNotPresent",
            "volumeMounts": [
              {
                "name": "init",
                "mountPath": "/mnt/init"
              }
            ]
          }
        ]'
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.1.21
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: ccatlett2000
  labels:
    app: mariadb
    role: database
spec:
  ports:
    - port: 3306
      protocol: TCP
      name: sql
  selector:
    app: mariadb
